--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
   "name": "seejesus-shopify-transfer-bookmarklet",
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.5.1",
+  "devDependencies": {
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
+    "terser": "^5.36.0",
+    "vite": "^5.4.11"
+  },
+  "scripts": {
+    "build": "vite build"
+  },
+  "type": "module"
 }
